# music-copy-assistant

./: .gitignore  README.md  pyproject.toml  run.sh  setting.yaml
src/mimikopi/: 01_make_fftimage_wav.py  02_make_movie.py  03_add_sound.py  __init__.py  path_setting.py  sound.py
